test/tests/stages/18_structures/valid/extra_credit/semantic_analysis/union_shadows_struct.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: tag
        Bool: 0
        List[2]: 
          CMemberDeclaration: 
            TIdentifier: a
            Int: 
          CMemberDeclaration: 
            TIdentifier: b
            Int: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: global_struct
        CCompoundInit: 
          List[2]: 
            CSingleInit: 
              CConstant: 
                CConstInt: 
                  TInt: 1
                None: 
              None: 
            CSingleInit: 
              CConstant: 
                CConstInt: 
                  TInt: 2
                None: 
              None: 
          None: 
        Structure: 
          TIdentifier: tag
          Bool: 0
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[5]: 
            CD: 
              CStructDecl: 
                CStructDeclaration: 
                  TIdentifier: tag
                  Bool: 1
                  List[2]: 
                    CMemberDeclaration: 
                      TIdentifier: x
                      Int: 
                    CMemberDeclaration: 
                      TIdentifier: y
                      Long: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: local_union
                  CCompoundInit: 
                    List[1]: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 100
                          None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: tag
                    Bool: 1
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CDot: 
                    TIdentifier: a
                    CVar: 
                      TIdentifier: global_struct
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 1
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CDot: 
                    TIdentifier: x
                    CVar: 
                      TIdentifier: local_union
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 100
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
