test/tests/stages/18_structures/invalid_types/tag_resolution/member_name_wrong_scope_nested.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s
        Bool: 0
        List[1]: 
          CMemberDeclaration: 
            TIdentifier: a
            Int: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[5]: 
            CD: 
              CStructDecl: 
                CStructDeclaration: 
                  TIdentifier: outer
                  Bool: 0
                  List[1]: 
                    CMemberDeclaration: 
                      TIdentifier: inner
                      Structure: 
                        TIdentifier: s
                        Bool: 0
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: foo
                  CCompoundInit: 
                    List[1]: 
                      CCompoundInit: 
                        List[1]: 
                          CSingleInit: 
                            CConstant: 
                              CConstInt: 
                                TInt: 1
                              None: 
                            None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: outer
                    Bool: 0
                  None: 
            CD: 
              CStructDecl: 
                CStructDeclaration: 
                  TIdentifier: s
                  Bool: 0
                  List[1]: 
                    CMemberDeclaration: 
                      TIdentifier: b
                      Int: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: ptr
                  CSingleInit: 
                    CAddrOf: 
                      CVar: 
                        TIdentifier: foo
                        None: 
                      None: 
                    None: 
                  Pointer: 
                    Structure: 
                      TIdentifier: outer
                      Bool: 0
                  None: 
            CS: 
              CReturn: 
                CDot: 
                  TIdentifier: b
                  CArrow: 
                    TIdentifier: inner
                    CVar: 
                      TIdentifier: ptr
                      None: 
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
